cabal-version:      2.4
name:               peras
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Duncan Coutts
maintainer:         duncan@dcoutts.me.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    -- Modules included in this executable, other than Main.
    exposed-modules: Peras

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base,
      containers,
      io-classes,
      hashable
    default-language: Haskell2010
